app/assets/stylesheets/common.css.scss
/* ... */
.issue-category-icon {
	display: inline;
	color: white;
	border: 1px;	
}

.issue-share-part {
	padding:7px; 
	background-color:#f6f6f6; 
	padding:10px 5px 10px 10px;
}
.info-link:hover {
	text-decoration:none;
}
.issue-info-title {
	position:relative; 
	overflow:hidden;
	white-space:nowrap;
	width:180px;
	left:10px; 
	height:15px;
	width:180px;
	overflow:hidden;
	white-space:nowrap;
	font-weight: bold;	
}

.issue-info-name {
	position:relative; 
	overflow:hidden;
	white-space:nowrap;
	width:180px;
	left:10px; 
	top:3px;
	height:15px;
	width:180px;
	overflow:hidden;
	white-space:nowrap;
}
.issue-info-loc {
	position:relative; 
	left:10px; 
	top:16px;	
}

.issue-info-user-image {
	float: left;
	width: 50px;
	height: 50px;
}


/* BUTTON */

.btn_green {
	font-family: 'Conv_DINPro-Bold';
	height:36px;
	line-height:36px;
	padding:0 30px 0 30px;
	border:1px solid white;
	background-color:#9ecc3a;
	font-size:14px;
	color:white;
	display:inline-block;
	text-align: center;
	&:hover {
		border:1px solid #dddddd;
	}
}

.btn_green_v2 {
	@extend .btn_green;
	width: 178px;
	background: url('/assets/btn-v2-back.png'); 
}

.btn-red {
	background: url('/assets/btn-v2-back-red.png');
}

// upload
.upload-preview {
	float:left; 
	margin-right:2px; 
}
.bar {
    height: 8px;
    background: white;
}
// Issue show
.issue-container {
	float:left; 
	width:680px;
}
.issue-container-green {
	padding: 30px;	
	background-color:$color-green;
	color:white;
}
.issue-container-gray {
	padding: 30px 0;	
	color:#555555;
}
.issue-cell {
	margin-bottom:10px;

	p {
		text-align: justify;
		font-size: 14px;
	}
}

.issue-cell-title {
	font-size:30px; 
	font-style:italic;
	font-family: 'Arial';
	letter-spacing: -1px;
}

.issue-cell-subtitle {
	font-size: 15px;
	font-weight: bold;
	letter-spacing: 1px;
}


.login-container {
	float:left;
	width:268px;
	padding: 40px 25px 0 25px;
	height:470px;
	font-family: 'Arial';

	input[type="text"] {
		width: 80%;
	}	

	input[type="password"] {
		width: 80%;
	}

}

.login-container-right {
	@extend .login-container;
}

.login-container-center {
	@extend .login-container;

	padding: 13px 25px 0 25px;
	width: 300px;

	input[type="text"] {
		width: 97%;
	}	

	input[type="password"] {
		width: 97%;
	}

	#register-wrapper {
		background-color:$color-green;
		padding: 20px 30px 10px 30px;
		color: white;
	}
}

.breadcrumb-container {
	/*font-family: 'Conv_DINPro-Regular';*/
	font-family: 'Arial';
	font-size:15px; 
	margin: 15px 0px 15px 30px;
	font-weight: bold;
}
.breadcrumb-container span {
	color: $color-green;
}

.documents {
	padding: 30px;
	display: inline-block;

	.header {
		color: $color-green;
		font-size:18px; 
		font-weight:bold;
	}

	.question {
		font-size:12px; 
		font-weight:bold;
	}

	.answer {
		font-size:12px; 
	}
	
	.list {
		font-size: 16px;
		font-weight: bold;
		color:white;
	}

	#content {
		width: 70%;
		padding: 30px;
		float: left;
	}

	#table-of-contents {
		padding: 30px;
		background: $color-green;
		float: left;

	}
}

.contact-form {
	padding: 20px;
	display: inline-block;
	background-color:$color-green;
	color: white;
	margin: 30px;

	#contact-details {
		width:424px;
		height:420px;
		padding-bottom: 10px;
	}

	input {
		width: 400px;
	}

	textarea {
		width: 400px;
	}

	#textarea-styled {
		height: 240px;
		font-family: arial;
		
	}
}


// Drop down menu
.dropdown {
	margin: 3px -22px 0 0;
	width: 103px;
	position: relative;
	height: 17px;
	text-align:left;
}
.profile-user-photo {
	width: 25px;
	height: 25px;
	float: left;
}

.submenu {
	background: #fff;
	position: absolute;
	top: -12px;
	left: -20px;
	z-index: 100;
	width: 135px;
	display: none;
	margin-left: 10px;
	padding: 40px 0 5px;
	border-radius: 6px;
	box-shadow: 0 2px 8px rgba(0, 0, 0, 0.45);
}
.dropdown li a {
	color: #555555;
	display: block;
	font-family: arial;
	font-weight: bold;
	cursor: pointer;
	text-decoration:none;
	height:27px;
	line-height:27px;
	padding:6px 15px;
}

.dropdown li a:hover {
	background:#9ecc3b;
	color: #FFFFFF;
	text-decoration: none;
}
a.account  {
	line-height: 16px;
	position: absolute;
	z-index: 110;
	color: black;
	display: block;
	padding: 12px 0 0 20px;
	height: 28px;
	width: 121px;
	margin: -11px 0 0 -10px;
	text-decoration: none;
	/*background: url(icons/arrow.png) 116px 17px no-repeat;*/
	cursor:pointer;
}
.root {
	list-style:none;
	margin:0px;
	padding:0px;
	padding: 11px 0 0 0px;
	border-top:1px solid #dedede;
}

/* COMMENTS CSS */

.comments-title {
	font-size: 18px;
	font-weight: bold;
	margin-top: 20px;
	color: #3b3b3b;
}
.comments-guest {
	font-size: 13px;
	font-weight: bold;
	color: #3b3b3b;
	display: block;
	padding: 15px 0px 15px 0px;
}
.comment-name {
	font-size: 14px;
	font-weight: bold;
}

.comment-name-admin {
	font-size: 13px;
	font-weight: bold;
}

.comment-time {
	color: #adadad;
	font-size: 12px;
}
.comment-text {
	font-size: 15px;
	display: inline-block;
	margin-top: 3px;
}
.comment-text-admin {
	@extend .comment-text;
	font-size: 13px;
}

.comment-delete {
	color: red;
	font-weight: bold;
	float: right;
}

 /* WYSIWYG overrides*/
.nicEdit-main {
  background-color: white !important;
}

/* TERMS OF AGREEMENT CSS */

	.tou {
		color: white;
		font-family: 'Arial';
	}

	.tou_link {
		text-decoration: underline;
	}

/* CREATE ISSUE */

.margin-top10 {
	margin-top: 10px;
}

/* ERROR DIV THAT TOP ONE */

.error {
	/*border: 1px solid red !important;*/
}


.error-div {
	padding: 20px;
  position: fixed;
  top: 0px;
  z-index: 9999;
  width: 960px;
  margin-left:-500px;
  left:50%;
	background-color: red;
	color: white;
	text-align: center;
	opacity:0.8;
	filter:alpha(opacity=80); /* For IE8 and earlier */
	display: none;
	font-weight: bold;
	font-size: 13px;
	letter-spacing: 1px;
	cursor: pointer;

	ul {
		font-size: 13px;
		letter-spacing: 0px;
		list-style-type: none;
	}
}

.info-div {
	@extend .error-div;
	background-color: #769B28;
	display: block;
}

.error-flash-div {
	@extend .error-div;
	background-color: #CE4300;
	display: block;
}
/* ... */

